--- a/lab_3_style.css
+++ b/lab_3_style.css
@@ -11,3 +11,47 @@
     padding: 5px;
     clear: both;
 }
+
+body{
+    background-color: blanchedalmond;
+}
+
+#main-nav{
+    background-color: blue;
+    color: white;
+    text-align: center;
+}
+
+#main-nav ul{
+    display: flex;
+}
+
+#main-nav li{
+    display: incline-block;
+    position: relative;
+}
+
+#main-nav li:hover{
+    background-color: aquamarine;
+    color: white;
+}
+
+#main-nav ul ul{
+    display: none;
+    position: absolute;
+}
+
+#main-nav li:hover ul{
+    display: block;
+    position: absolute;
+    background-color: azure;
+    float: left;
+    padding: 0;
+}
+
+#main-nav ul li{
+    list-style-type: none;
+    text-align: center;
+    padding: 10px;
+}
+
