--- a/lab_3_style.css
+++ b/lab_3_style.css
@@ -16,37 +16,24 @@ body{
     background-color: blanchedalmond;
 }
 
+/* Nav */
 #main-nav{
     background-color: blue;
-    color: white;
     text-align: center;
+}
+
+#main-nav ul a{
+    color: white;
 }
 
 #main-nav ul{
     display: flex;
 }
 
-#main-nav li{
-    display: incline-block;
-    position: relative;
-}
-
+/* hover state */
 #main-nav li:hover{
     background-color: aquamarine;
     color: white;
-}
-
-#main-nav ul ul{
-    display: none;
-    position: absolute;
-}
-
-#main-nav li:hover ul{
-    display: block;
-    position: absolute;
-    background-color: azure;
-    float: left;
-    padding: 0;
 }
 
 #main-nav ul li{
