--- a/lab_3_style.css
+++ b/lab_3_style.css
@@ -1,3 +1,4 @@
+/* external CSS file */
 /* for header and footer */
 #bar{
     /* text algined to center */
@@ -36,9 +37,57 @@ body{
     color: white;
 }
 
+/* removing bullet points*/
 #main-nav ul li{
     list-style-type: none;
     text-align: center;
     padding: 10px;
+}
+
+/* norm textbox size */
+#name{
+    width: 100px;
+}
+/* when focused, textbox increases */
+#name:focus{
+    width: 150px;
+}
+
+.main-container{
+    /* custom font family*/
+    font-family:monospace;
+}
+/* main content */
+/* on same line */
+.chosing{
+    float: left;
+    background-color: aqua;
+    color: black;
+    border: 2px solid black;
+    /* % width for main content */
+    width:70%;
+    /* margin and padding for main content*/
+    margin: 0px;
+    padding: 5px;
+    border-radius: 15px;
+}
+
+/* sidebar */
+#rules{
+    text-align: center;
+    /* color diff than rest of page */
+    background-color: green;
+    float: right;
+    /* % width for sidebar */
+    width: 25%;
+    /* margin and padding for sidebar */
+    margin-right: 10px;
+    padding: 3px;
+    border: 2px solid black;
+    border-radius: 15px;
+}
+/*hover changes background color*/
+#rules:hover{
+    background-color: greenyellow;
 }
 
